--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clarifai": "^2.8.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-particles-js": "^2.3.0",
     "react-scripts": "1.1.4",
     "react-tilt": "^0.1.4"
   },
