--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.4.2",
     "react-particles-js": "^2.3.0",
     "react-scripts": "1.1.4",
-    "react-tilt": "^0.1.4"
+    "react-tilt": "^0.1.4",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
